email send confirmation shown for 3 sec after email send

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -129,5 +129,6 @@
       "text10": "Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen. Eine aktuelle Version wird stets auf dieser Webseite veröffentlicht.",
       "title11": "Kontakt",
       "text11": "Falls Sie Fragen zu dieser Datenschutzerklärung oder zur Verarbeitung Ihrer personenbezogenen Daten haben, können Sie mich unter den folgenden Kontaktdaten erreichen:"
-     }
+     },
+     "confirm": "Email gesendet!"
 }
