--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -129,5 +129,6 @@
     "text10": "We reserve the right to adapt this privacy policy as needed. A current version will always be published on this website.",
     "title11": "Contact",
     "text11": "If you have any questions about this privacy policy or the processing of your personal data, you can reach me using the following contact details:"
-  }
+  },
+  "confirm": "Email has been sent!"
 }
